Next release

  - ...

3.0a8 (2010-01-20)

  - Don't cleanup file descriptors on first supervisord invocation:
    this is a lame workaround for Snow Leopard systems that use
    libdispatch and are receiving "Illegal instruction" messages at
    supervisord startup time.  Restarting supervisord via
    "supervisorctl restart" may still cause a crash on these systems.

  - Got rid of Medusa hashbang headers in various files to ease RPM
    packaging.

  - Allow umask to be 000 (patch contributed by Rowan Nairn).

  - Fixed a bug introduced in 3.0a7 where supervisorctl wouldn't ask
    for a username/password combination properly from a
    password-protected supervisord if it wasn't filled in within the
    "[supervisorctl]" section username/password values.  It now
    properly asks for a username and password.

  - Fixed a bug introduced in 3.0a7 where setup.py would not detect the
    Python version correctly.  Patch by Daniele Paolella.

  - Fixed a bug introduced in 3.0a7 where parsing a string of key/value
    pairs failed on Python 2.3 due to use of regular expression syntax
    introduced in Python 2.4.

  - Removed the test suite for the ``memmon`` console script, which was 
    moved to the Superlance package in 3.0a7.

  - Added release dates to CHANGES.txt.

  - Reloading the config for an fcgi process group did not close the fcgi
    socket - now, the socket is closed whenever the group is stopped as a unit
    (including during config update). However, if you stop all the processes
    in a group individually, the socket will remain open to allow for graceful
    restarts of FCGI daemons.  (Roger Hoover)

  - Rereading the config did not pick up changes to the socket parameter in a
    fcgi-program section.  (Roger Hoover)

  - Made a more friendly exception message when a FCGI socket cannot be
    created.  (Roger Hoover)

  - Fixed a bug where the --serverurl option of supervisorctl would not
    accept a URL with a "unix" scheme.  (Jason Kirtland)
